@@ -12,8 +12,10 @@ Release 0.2.1 - Unreleased
    HBASE-819   Remove DOS-style ^M carriage returns from all code where found
                (Jonathan Gray via Jim Kellerman)
    HBASE-818   Deadlock running 'flushSomeRegions' (Andrew Purtell via Stack)
-   HBASE-821   Need mainline to flush when 'Blocking updates' goes up.
+   HBASE-820   Need mainline to flush when 'Blocking updates' goes up.
                (Jean-Daniel Cryans via Stack)
+   HBASE-821   UnknownScanner happens too often (Jean-Daniel Cryans via Stack)
+
 
   IMPROVEMENTS
    HBASE-801  When a table haven't disable, shell could response in a "user
